infrastructure/k8s/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: marketplace-frontend-deployment
  namespace: production
  labels:
    app: marketplace-frontend
spec:
  replicas: 3
  selector:
    matchLabels:
      app: marketplace-frontend
  template:
    metadata:
      labels:
        app: marketplace-frontend
    spec:
      containers:
      - name: frontend
        image: khalilksa33/bl-mp-frontend:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
        resources:
          requests:
            cpu: 100m
            memory: 256Mi
          limits:
            cpu: 500m
            memory: 512Mi
---
apiVersion: v1
kind: Service
metadata:
  name: marketplace-frontend-service
  namespace: production
spec:
  ports:
  - port: 80
    targetPort: 3000
  selector:
    app: marketplace-frontend
